--- a/views/search.html
+++ b/views/search.html
@@ -8,16 +8,16 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha384-oT/I/GRc94B9PbtlgOcVgF2+X74Ix5/balSjG7W5ovJybPbbvFdQj2PiBmL2gXzy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="../public/styles/styles.css">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand text-white" href="#">
-            <img src="./logo.png" class="d-inline-block align-top" alt="Spooptify Logo">
+            <img src="../public/img/logo.png" class="d-inline-block align-top" alt="Spooptify Logo">
             Spooptify
         </a>
-        <a href="/logout" class="btn btn-outline-light">Logout</a>
+        <a href="/api/logout" class="btn btn-outline-light">Logout</a>
     </nav>
 
     <!-- Main Container -->
@@ -56,7 +56,7 @@
                     alert('Please enter a search term.');
                     return;
                 }
-                fetch(`/search-query?q=${encodeURIComponent(query)}`)
+                fetch(`/api/search-query?q=${encodeURIComponent(query)}`)
                     .then(response => response.json())
                     .then(data => {
                         resultDiv.innerHTML = '';
@@ -66,7 +66,7 @@
                             resultDiv.innerHTML = `
                                 <h2>${data.name || 'Unknown'} by ${data.artists?.[0]?.name || 'Unknown Artist'}</h2>
                                 <img src="${data.album?.images?.[0]?.url || 'placeholder.png'}" alt="${data.name}" class="img-fluid rounded">
-                                <a href="/play?uri=${data.uri}" class="btn btn-primary mt-3">Play</a>
+                                <a href="/api/play?uri=${data.uri}" class="btn btn-primary mt-3">Play</a>
                             `;
                         }
                     })
@@ -77,7 +77,7 @@
             });
 
             randomSongBtn.addEventListener('click', () => {
-                fetch('/random-song')
+                fetch('/api/random-song')
                     .then(response => response.json())
                     .then(data => {
                         console.log("hi")
@@ -99,7 +99,7 @@
             });
 
             showStatsBtn.addEventListener('click', () => {
-                fetch('/get-user-stats')
+                fetch('/api/get-user-stats')
                     .then(response => response.json())
                     .then(data => {
                         resultDiv.innerHTML = '';
