--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand text-white" href="#">
-            <img src="../public/img/logo.png" class="d-inline-block align-top" alt="Spooptify Logo">
+            <!-- <img src="../public/img/logo.png" class="d-inline-block align-top" alt="Spooptify Logo"> -->
             Spooptify
         </a>
         <a href="/api/logout" class="btn btn-outline-light">Logout</a>
