--- a/views/search.html
+++ b/views/search.html
@@ -15,14 +15,14 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand text-white" href="#">
             <!-- <img src="../public/img/logo.png" class="d-inline-block align-top" alt="Spooptify Logo"> -->
-            Spooptify
+            Spotify Web
         </a>
         <a href="/api/logout" class="btn btn-outline-light">Logout</a>
     </nav>
 
     <!-- Main Container -->
     <div class="container">
-        <h1 class="text-center my-4">Spooptify</h1>
+        <h1 class="text-center my-4">Spotify Web</h1>
 
         <!-- Search Section -->
         <div class="input-group mb-4">
